Implement priv key input, view balance, random spend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ web-sys = { version = "0.3.76", features = [
     "Window",
     "Document",
     "HtmlElement",
+    "HtmlInputElement",
     "Text",
 ] }
 coin = { path = "../chuck-coin" }
