--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,6 @@ edition = "2021"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.99"
-web-sys = { version = "0.3.76", features = [
-    "Window",
-    "Document",
-    "HtmlElement",
-    "HtmlInputElement",
-    "Text",
-] }
+web-sys = { version = "0.3.76", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "Text"] }
 coin = { path = "../chuck-coin" }
 hex = "0.4.3"
