--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,18 @@ edition = "2021"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.99"
-web-sys = { version = "0.3.76", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "Text"] }
+web-sys = { version = "0.3.76", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "Text", "WebSocket", "MessageEvent"] }
 coin = { path = "../chuck-coin" }
 hex = "0.4.3"
+lazy_static = "1.5.0"
+serde = { version = "1.0.214", features = ["derive"] }
+futures = "0.3.31"
+bincode = "1.3.3"
+wasm-bindgen-futures = "0.4.49"
+ws_stream_wasm = "0.7.4"
+
+tokio = { version = "1.42.0" }
+js-sys = "0.3.76"
+tokio-tungstenite-wasm = "0.4.0"
+# tokio-tungstenite = "0.26.1"
+# bincode-no-std = "1.0.0"
